<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright [2053] [www.rapidpm.org / Sven Ruppert (sven.ruppert@rapidpm.org)]
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.rapidpm.workshop</groupId>
  <artifactId>opench2015</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <modules>
    <module>modules</module>
  </modules>

  <packaging>pom</packaging>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jmh.version>1.10.4</jmh.version>
  </properties>

  <inceptionYear>2015</inceptionYear>
  <organization>
    <name>RapidPM</name>
    <url>http://www.rapidpm.org</url>
  </organization>
  <scm>
    <url>https://github.com/svenruppert/20150901_proxy_deep_dive</url>
    <connection>scm:git:https://github.com/svenruppert/20150901_proxy_deep_dive.git</connection>
    <developerConnection>scm:git:https://github.com/svenruppert/20150901_proxy_deep_dive.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <developers>
    <developer>
      <name>Sven Ruppert</name>
      <email>sven.ruppert@gmail.com</email>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>
  <issueManagement>
    <system>Github</system>
    <url>https://github.com/svenruppert/20150901_proxy_deep_dive/issues</url>
  </issueManagement>
  <!--<ciManagement>-->
  <!--<system>TravisCI</system>-->
  <!--<url>https://travis-ci.org/RapidPM/rapidpm-dependencies/</url>-->
  <!--</ciManagement>-->
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>


  <dependencies>
    <dependency>
      <groupId>io.dropwizard.metrics</groupId>
      <artifactId>metrics-core</artifactId>
      <version>3.1.2</version>
    </dependency>

    <!--Logging-->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.3</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-1.2-api</artifactId>
      <version>2.3</version>
    </dependency>


    <dependency>
      <!--  must be on the classpath  -->
      <groupId>org.jacoco</groupId>
      <artifactId>org.jacoco.agent</artifactId>
      <classifier>runtime</classifier>
      <version>0.7.5.201505241946</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.0</version>
    </dependency>

    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.3.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.1.0</version>
      <scope>test</scope>
    </dependency>
    <!--Microbenchmarking-->
    <!--<dependency>-->
      <!--<groupId>org.openjdk.jmh</groupId>-->
      <!--<artifactId>jmh-core</artifactId>-->
      <!--<version>${jmh.version}</version>-->
      <!--<scope>test</scope>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.openjdk.jmh</groupId>-->
      <!--<artifactId>jmh-core-benchmarks</artifactId>-->
      <!--<version>${jmh.version}</version>-->
      <!--<scope>test</scope>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.openjdk.jmh</groupId>-->
      <!--<artifactId>jmh-generator-annprocess</artifactId>-->
      <!--<version>${jmh.version}</version>-->
      <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.openjdk.jmh</groupId>-->
      <!--<artifactId>jmh-generator-reflection</artifactId>-->
      <!--<version>${jmh.version}</version>-->
      <!--<scope>test</scope>-->
    <!--</dependency>-->


  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.10.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.16</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-repository-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.4</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.9.1</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <forkMode>always</forkMode>
          <!--<skipTests>true</skipTests>-->
          <!--<forkCount>2.5C</forkCount>-->
          <!--<forkCount>1</forkCount>-->
          <!--<parallel>methods</parallel>-->
          <!--<threadCount>10</threadCount>-->
          <!--<reuseForks>false</reuseForks>-->
          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
          <!--<argLine>-Xmx1024m</argLine>-->
          <!--<forkMode>always</forkMode>-->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-repository-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add generated sources</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/annotations</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>add generated test sources</id>
            <phase>generate-test-sources</phase>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/annotations</source>
                <source>${project.build.directory}/generated-test-sources/annotations</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

  <!--for development of features/develop branch-->
  <!--<distributionManagement>-->
  <!--<repository>-->
  <!--<id>releases</id>-->
  <!--<name>RapidPM Releases</name>-->
  <!--<url>http://${nexus.ip}/nexus/content/repositories/releases</url>-->
  <!--</repository>-->
  <!--<snapshotRepository>-->
  <!--<id>snapshots</id>-->
  <!--<name>RapidPM Snapshots</name>-->
  <!--<url>http://${nexus.ip}/nexus/content/repositories/snapshots</url>-->
  <!--</snapshotRepository>-->
  <!--</distributionManagement>-->
  <profiles>
    <profile>
      <id>qm-qs-junit</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <inherited>true</inherited>
            <configuration>
              <includes>
                <include>**/junit/**</include>
              </includes>
              <forkMode>always</forkMode>
              <reportFormat>xml</reportFormat>
              <!--<classesDirectory>target/generated-classes/emma/classes</classesDirectory>-->
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>gen-javadoc</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>qm-qs-pitest</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <!-- Enable mutation testing -->
          <plugin>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-maven</artifactId>
            <configuration>
              <targetClasses>
                <param>org.rapidpm.*</param>
              </targetClasses>
              <targetTests>
                <param>org.rapidpm.*</param>
                <param>junit.org.rapidpm.*</param>
              </targetTests>
            </configuration>
          </plugin>

        </plugins>
      </build>
    </profile>

    <profile>
      <id>qm-qs-jacoco</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>default-instrument</id>
                <goals>
                  <goal>instrument</goal>
                </goals>
              </execution>
              <execution>
                <id>default-restore-instrumented-classes</id>
                <goals>
                  <goal>restore-instrumented-classes</goal>
                </goals>
              </execution>
              <execution>
                <id>default-report</id>
                <phase>prepare-package</phase>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
              <execution>
                <id>default-check</id>
                <goals>
                  <goal>check</goal>
                </goals>
                <configuration>
                  <rules>
                    <!--  implementation is needed only for Maven 2  -->
                    <rule implementation="org.jacoco.maven.RuleConfiguration">
                      <element>BUNDLE</element>
                      <limits>
                        <!--  implementation is needed only for Maven 2  -->
                        <limit implementation="org.jacoco.report.check.Limit">
                          <counter>COMPLEXITY</counter>
                          <value>COVEREDRATIO</value>
                          <minimum>0.60</minimum>
                        </limit>
                      </limits>
                    </rule>
                  </rules>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <systemPropertyVariables>
                <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
              </systemPropertyVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>


</project>